...
    func showError() {
        let alertController = UIAlertController(
            title: "Что-то пошло не так(",
            message: "Не удалось войти в систему",
            preferredStyle: .alert)
        let action = UIAlertAction(
            title: "OK",
            style: .default,
            handler: nil)
        alertController.addAction(action)
        present(alertController, animated: true, completion: nil)
    }
    
...
