...
    }()
    
    private var contentSize: CGSize {
        CGSize(width: view.frame.width, height: view.frame.height)
    }
    
    @objc private lazy var backButton: UIButton = {
        let button = UIButton.systemButton(
            with: UIImage(named: "nav_back_button")!,
            target: self,
            action: #selector(Self.didTapBackButtonSingleImage)
        )
        button.accessibilityIdentifier = "backButton"
...
